Fixed wrong font size rendering

--- a/sass/base.sass
+++ b/sass/base.sass
@@ -18,7 +18,7 @@
 
 html
   // Fix for inconsistent letter size in Chrome
-  font-size: 18px
+  font-size: 17px
   font-family: bariol, sans-serif
 
 a
